CI: change the action

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,25 +5,12 @@ on:
     tags:
       - 'v*'
 
-jobs:
-  create-release:
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }} 
-    steps:
-      - uses: actions/checkout@v4
-      - name: Create Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+permissions:
+  contents: write
 
-  build-and-upload:
-    needs: create-release
+jobs:
+  build-and-release:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
@@ -37,7 +24,6 @@ jobs:
             target: x86_64-pc-windows-msvc
             artifact_name: allal-rs-x86_64-pc-windows-msvc.zip
 
-    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       
@@ -63,12 +49,9 @@ jobs:
         if: runner.os == 'Windows'
         run: Compress-Archive -Path target/${{ matrix.target }}/release/allal-rs.exe -DestinationPath ${{ matrix.artifact_name }}
 
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ${{ matrix.artifact_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./${{ matrix.artifact_name }}
-          asset_name: ${{ matrix.artifact_name }}
-          asset_content_type: application/octet-stream
